--- a/css/custom.css
+++ b/css/custom.css
@@ -212,3 +212,15 @@ body{
     left: 44%;
     right: auto;
 }
+.ministry-card{
+    transition: all ease-in-out 0.3s;
+}  
+
+.ministry-card:hover{
+  
+    cursor: pointer;  
+    border-bottom: 3px solid #b9a879; 
+}
+.ministry-card:hover .card-footer {
+    font-weight: bold;
+}
