--- a/css/custom.css
+++ b/css/custom.css
@@ -224,3 +224,26 @@ body{
 .ministry-card:hover .card-footer {
     font-weight: bold;
 }
+
+/*Events Page*/
+.event-calendar{
+    position: absolute;
+    bottom: 30%;
+    display: inline-block;
+    width: 100px;
+    font-size: 1.25rem;
+    background-color: #fff;
+    border-radius: 5px;
+    text-align: center;
+}
+.event-calendar .icon-calendar{
+    font-size: 2.2rem;
+    position: absolute;
+    top: -15%;
+    left: 36%;
+}
+
+.event-calendar p:last-child{
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
